--- a/index.html
+++ b/index.html
@@ -13,6 +13,44 @@
     <!-- Add Font Awesome for icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GIF with Text</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            text-align: center;
+        }
+        .container img {
+            max-width: 100%;
+            height: auto;
+        }
+        .container p {
+            margin-top: 10px;
+            font-size: 1.5em;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="https://media.discordapp.net/attachments/958886563713007740/1028015486295879731/25C0A027-5798-4845-B625-2A30052AFE22-1.gif?ex=66d2bc47&is=66d16ac7&hm=6e52b9816e43e5de538eb5427b0b4e08dd734586181abbae6dcc400666a64e9d&" alt="Exciting GIF">
+        <p>THIS COULD BE YOU</p>
+    </div>
+</body>
+</html>
 
 <body>
     <header>
