--- a/grindcraft.html
+++ b/grindcraft.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,8 +9,8 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #000; /* Black background */
-            color: #fff; /* White text color */
+            background-color: #f0f0f0; /* Pleasant gray background */
+            color: #333; /* Dark gray text color for better readability */
             text-align: center;
         }
         .container {
@@ -26,7 +27,7 @@
             font-size: 1em;
         }
         a {
-            color: #1e90ff; /* Color for links */
+            color: #007bff; /* A pleasant blue for links */
             text-decoration: none;
         }
         a:hover {
@@ -37,7 +38,6 @@
 <body>
     <div class="container">
         <iframe src="https://grindcraft.com/game.php" title="Grindcraft" scrolling="no" allow="autoplay; payment; fullscreen; microphone; clipboard-read; focus-without-user-activation *; screen-wake-lock; gamepad; clipboard-write 'self' https://grindcraft.com" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true" loading="eager"></iframe>
-        <p><a href="https://grindcraft.com/" target="_blank">Grindcraft</a> is Developed by <a href="https://playsaurus.com" target="_blank">Playsaurus</a> - an idle game development studio.</p>
     </div>
 </body>
 </html>
